Added more information about what I do at Allstate

--- a/index.html
+++ b/index.html
@@ -270,9 +270,11 @@
                     <img class="rounded-full border border-black mx-auto" src="images/Allstate.svg" alt="Allstate Logo" width="150">
                   </div>
                   <div class="text-black text-lg pt-5">
-                    <p>Actively contribute as a software engineer on the CTS XP (Claims Technology Accelerated Program) team</p>
-                    <p>Attend weekly team ceremonies and deliver software</p>
-                    <p>Paired programming and test driven development.</p>
+                    <p class="p-2">Building full stack programs using React, javascript/typescript (frontend) and Java, Spring boot, JUnit (backend)</p>
+                    <p class="p-2">Partook in the launch of a new customer facing product launch that has been in development for over a year</p>
+                    <p class="p-2">Helped start up another internal product with other interns with the assistance of senior developers</p>
+                    <p class="p-2">Paired programming and test driven development</p>
+                    <p class="p-2">Utilized terminal to perform git commands</p>
                   </div>
                 </div>
               </div>
@@ -283,9 +285,9 @@
                     <img class="rounded-full border border-black mx-auto" src="images/Apple.svg" alt="Apple Logo" width="150">
                   </div>
                   <div class="text-black text-lg pt-5">
-                    <p>Highly skilled at uncovering customers' needs, then following through with enlightening solutions</p>
-                    <p>Maintaining visual merchandising and assisting team members</p>
-                    <p>Ready to apply my learning in customer interactions</p>
+                    <p class="p-2">Highly skilled at uncovering customers' needs, then following through with enlightening solutions</p>
+                    <p class="p-2">Maintaining visual merchandising and assisting team members</p>
+                    <p class="p-2">Ready to apply my learning in customer interactions</p>
                   </div>
                 </div>
               </div>
@@ -300,9 +302,9 @@
                     </div>
                   </div>
                   <div class="text-black text-lg pt-5">
-                    <p>Follow agile methodology to develop and test new features</p>
-                    <p>Utilize Figma to storyboard visualizations for front end development</p>
-                    <p>Create documentation to streamline development</p>
+                    <p class="p-2">Follow agile methodology to develop and test new features</p>
+                    <p class="p-2">Utilize Figma to storyboard visualizations for front end development</p>
+                    <p class="p-2">Create documentation to streamline development</p>
                   </div>
                 </div>
               </div>
