--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <link href="https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css" rel="stylesheet"> <!--Tailwind-->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"> <!--Animate.css-->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"> <!--Animate.css (future use)-->
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="Stylesheet" href="styles.css">
     <meta charset="UTF-8">
@@ -397,17 +397,6 @@
         menu.classList.toggle('hidden')
         })
       })
-    </script>
-    <!--Blur background on scroll-->
-    <script>
-      /*
-      $(window).scroll(function() {
-        let s = $(window).scrollTop(),
-
-        opacityVal = (s / 150);
-
-        $('.blurred-img').css('opacity', opacityVal);
-      });*/
     </script>
     <!--Javascript Tabs-->
     <script>
