--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   </head>
 
   <!--Body-->
-  <body class="parallax">
+  <body>
     <!--Header-->
     <header>
       <!--Navbar-->
@@ -40,6 +40,7 @@
         </div>
       </nav>
     </header>
+    <div class="parallax">
     <!--Main-->
     <main class="pt-20">
       <div class="flex flex-col">
@@ -373,6 +374,7 @@
         </div>
       </div>
     </main>
+  </div>
     <!--React stuff-->
     <script src="https://unpkg.com/react@18/umd/react.development.js" crossorigin></script>
     <script src="https://unpkg.com/react-dom@18/umd/react-dom.development.js" crossorigin></script>
