--- a/index.html
+++ b/index.html
@@ -43,16 +43,18 @@
     </header>
     <div class="parallax">
       <!--Dark mode button-->
-      <div class="flex justify-end items-center space-x-2">
+      <!-- <div class="flex justify-end items-center space-x-2">
         <span class="text-sm text-gray-800">Light</span>
         <div>
           <input type="checkbox" name="" id="toggle" class="hidden">
-          <div class="w-9 h-5 flex items-center bg-gray-300 rounded-full p-1">
-            <div class="w-4 h-4 bg-white rounded-full shadow-md"></div>
-          </div>
+          <label for="toggle">
+            <div class="w-9 h-5 flex items-center bg-gray-300 rounded-full p-1">
+              <div class="toggle-dot w-4 h-4 bg-white rounded-full shadow-md transform duration-200 ease-in-out"></div>
+            </div>
+          </label>
         </div>
-        <span class="text-sm text-gray-800">Dark</span>
-      </div>
+        <span class="text-sm text-gray-600">Dark</span>
+      </div> -->
       <!--Main-->
       <main class="pt-20">
         <div class="flex flex-col">
