--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html class="dark">
   <head>
     <link href="https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css" rel="stylesheet">
     <link href="./dist/output.css" rel="stylesheet"> <!--Tailwind-->
@@ -46,7 +46,7 @@
       <!-- <div class="flex justify-end items-center space-x-2">
         <span class="text-sm text-gray-800">Light</span>
         <div>
-          <input type="checkbox" name="" id="toggle" class="hidden">
+          <input type="checkbox" name="" id="toggle" class="hidden" />
           <label for="toggle">
             <div class="w-9 h-5 flex items-center bg-gray-300 rounded-full p-1">
               <div class="toggle-dot w-4 h-4 bg-white rounded-full shadow-md transform duration-200 ease-in-out"></div>
@@ -65,9 +65,10 @@
             <p class="text-lg px-10 my-5">Yesterday is history. Tomorrow is a mystery, but today is a gift, that's why it's called the present</p>
             <img class="mx-auto" src="images/Logo.svg" alt="Logo" width="80"> <!--Logo-->
           </div>
-          <!--School-->
+          <!--Content-->
           <div id="school" class="bg-gray-100 dark:bg-black rounded-tl-lg rounded-tr-lg">
               <div class="text-center">
+                <!--School-->
                 <div class="bg-white dark:bg-neutral-900 rounded-xl p-10 m-5 shadow-sm">
                 <!--School img-->
                 <img class="w-60 h-60 rounded-full border-solid border border-black mx-auto shadow-lg" src="images/School.svg" alt="School glyph" width="300">
@@ -83,7 +84,7 @@
                 </div>
                 <!--Content-->
                 <div id="About" class="tabcontent">
-                  <p class="dark:text-white mb-20 md:px-10">Hello! My name is Oke Amuwha. I am currently a junior at Wayne State University pursuing 
+                  <p class="dark:text-white mb-20 md:px-10">Hello! My name is Oke Amuwha. I am currently a rising senior at Wayne State University pursuing 
                     my bachelors in Computer Science. After I graduate I hope to work in computer software engineering, helping in machine learning,
                     full stack development or UI/UX design.
                   </p>
@@ -359,7 +360,7 @@
               <footer>
                 <h1 class="text-blue-600 text-3xl text-left font-bold pt-5 ml-10">Contact</h1>
                 <div class="bg-white dark:bg-neutral-900 dark:text-white rounded-xl p-10 m-5 shadow-sm">
-                  <div class="p-4 mb-5">
+                  <div class="p-4">
                     <div class="flex flex-row justify-center">
                       <a href="https://www.linkedin.com/in/oke-oghene-amuwha-1b1489203/" target="_blank">
                         <div class="m-2 md:m-5 hover:text-blue-400">
@@ -367,7 +368,7 @@
                           <p class="pt-2 text-sm">LinkedIn</p>
                         </div>
                       </a>
-                      <a href="mailto: gv4281@wayne.edu">
+                      <a href="mailto: amuwhao46@gmail.com">
                         <div class="m-2 md:m-5 hover:text-blue-400">
                           <img class="rounded-full mx-auto border border-black" src="images/Mail.svg" alt="Mail" width="50">
                           <p class="pt-2 text-sm">Mail</p>
@@ -413,6 +414,21 @@
         menu.classList.toggle('hidden')
         })
       })
+    </script>
+    <!--Toggle Dark Mode-->
+    <script>
+      const checkbox = document.querySelector("#toggle");
+      const html = document.querySelector("html");
+
+      const toggleDarkMode = function () {
+        checkbox.checked 
+        ? html.classList.add("dark") 
+        : html.classList.remove("dark");
+      }
+
+      toggleDarkMode();
+
+      checkbox.addEventListener("click", toggleDarkMode);
     </script>
     <!--Javascript Tabs-->
     <script>
