Updated portrait picture

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
       <main class="pt-20">
         <div class="flex flex-col">
           <!--Cover-->
-          <img class="w-80 h-80 rounded-full mx-auto" src="images/Portrait.jpeg" alt="Profile Picture" width="500">
+          <img class="w-80 h-80 rounded-full mx-auto" src="images/Portrait.jpg" alt="Profile Picture" width="500">
           <div class="mx-auto pb-20 text-white text-center">
             <p class="text-5xl font-bold pt-5">Oke-Oghene Amuwha</p>
             <p class="text-lg px-10 my-5">Yesterday is history. Tomorrow is a mystery, but today is a gift, that's why it's called the present</p>
