Updated opening message

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
           <img class="w-80 h-80 rounded-full mx-auto" src="images/Portrait.jpg" alt="Profile Picture" width="500">
           <div class="mx-auto pb-20 text-white text-center">
             <p class="text-5xl font-bold pt-5">Oke-Oghene Amuwha</p>
-            <p class="text-lg px-10 my-5">Lay on the grass, look up at the clouds, and think about life</p>
+            <p class="text-lg px-10 my-5">Lay on the grass, look up at the clouds, and ponder my existence</p>
             <img class="mx-auto" src="images/Logo.svg" alt="Logo" width="80"> <!--Logo-->
           </div>
           <!--Content-->
