Fixed a bug that prevented resume from showing up

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             <a href="#experience" class="block mt-4 md:inline-block md:mt-0 hover:text-indigo-800 mr-4">Experience</a>
           </div>
           <div>
-            <a href="files/Oke-Oghene Amuwha Resume.pdf" target="_blank" class="inline-block text-sm px-4 py-2 leading-none border rounded text-indigo-800 border-indigo-800 hover:border-transparent hover:text-white hover:bg-indigo-800 mt-4 md:mt-0">Resume</a>
+            <a href="files/Oke-Oghene_Amuwha_Resume.pdf" target="_blank" class="inline-block text-sm px-4 py-2 leading-none border rounded text-indigo-800 border-indigo-800 hover:border-transparent hover:text-white hover:bg-indigo-800 mt-4 md:mt-0">Resume</a>
           </div>
         </div>
       </nav>
