Added my credits

--- a/index.html
+++ b/index.html
@@ -10,6 +10,49 @@
     <title>Oke Amuwha</title>
     <link rel="icon" href="images/Favicon.png" type="image/png"> <!--Favicon-->
   </head>
+<!-- 
+                                            !YPPP55PPPY~                                            
+                                          7G5!:     .:7PG!                                          
+                                         5#~            !&J                                         
+                                        7@^              ~@!                                        
+                                        5#   7?.    :?!  .&J                                        
+                                        !@~ Y@G.    :G@J !@~                                        
+                                         ?#B@J        Y@G#7                                         
+                                         ^&@B?~:.  .:~J#@&^                                         
+                                        7@#^:7Y555555J7.~#@!                                        
+                                       Y@P.              :G@J                                       
+                                     .G@Y                  Y@P.                                     
+                                    ^#@7                    7@#^                                    
+                                   7@#^                      ^#&!                                   
+                                  Y@#7~!!!!!!!!!!!!!!!!!!!!!!~7&@J                                  
+                                .P@B5?!!!!!!!!!!!!!!!!!!!!!!!!?5#@P.                                
+                               ^#@G5!                          75B@B^                               
+                              7&&PY^                            ~YG@&!                              
+                             Y@#PJ:                              :YP&@J                             
+                           .P@B5?.                                .?5#@P.                           
+                          ^B@G5!                                    75B@B:                          
+                         7&@PY^                                      ~YG@&!                         
+                        J@&PJ:                                        :YP&@J                        
+                      .P@B5?.                                          .?5#@5.                      
+                     ^#@G5!                                              75B@B:                     
+                    !@#7YY:                                              :5J7&&!                    
+                   J@G: .J5^                                            ~5J. :B@?                   
+                 .P@Y     ?5!                                          757    .5@5.                 
+                ^#@7       !5?.                                      .J5~       ?@B:                
+               !@&~         ^5Y:                                    :YY:         !&&~               
+              J@G:           :J5^                                  ~5J.           :B@?              
+            .P@5               ?5!                                757              .5@5             
+     ^7JYYJJB@Y                 !5?.                            .?5~                 5@BJJYYJ7^     
+  :YG5?~^:J@#J5P7                ^5Y:                          :YY^                7P5J&@J:^~?5GY:  
+ 7#J:     75:  ^PB:               .JY^........................~5J.               :BP^  ^57     :J#7 
+!@!           ^^^G#~^^^^^^^^^^^^^^^~5GPPPPPPPPPPPPPPPPPPPPPPPPGY~^^^^^^^^^^^^^^^~#G^^^           !@!
+GB           .PBGG@#GGGGGGGGGGGGGGGGGGBBBBBBBBBBBBBBBBBBBBBBBBGGGGGGGGGGGGGGGGGG#@GGB5            BG
+5#               ~@~                                                            ~@~               #5
+:#5             :#5                                                              5#:             5#:
+ .5B?:        ^YB?                                                                ?BY^        :?B5. 
+   ^J55YJ??JY557.                                                                  .755YJ??JY55J^   
+      .^~!!~^.                                                                        .^~!!~^.       
+                                    Website by Oke-Oghene Amuwha-->
 
   <!--Body-->
   <body>
