--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="Stylesheet" href="styles.css">
     <meta charset="UTF-8">
     <title>Oke Amuwha</title>
-    <link rel="icon" href="images/Favicon.png" type="image/png"> <!--Favicon-->
+    <link rel="icon" href="images/Favicon_Logo.png" type="image/png"> <!--Favicon-->
   </head>
 <!-- 
                                             !YPPP55PPPY~                                            
